test/enforce-container-resources/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sEnforceContainerResources
metadata:
  name: enforce-container-resources
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: [ "ReplicationController", "Pod" ]
      - apiGroups: [ "apps" ]
        kinds: [ "Deployment", "ReplicaSet", "DaemonSet", "StatefulSet" ]
      - apiGroups: [ "batch" ]
        kinds: [ "Job", "CronJob" ]
    excludedNamespaces:
      - calico-system
      - ingress-nginx
      - kube-system
      - kube-prometheus-stack
      - tigera-operator
