test/enforce-container-resources/cronjob-no-limit-memory-excluded-namespace.yaml
apiVersion: batch/v1
kind: CronJob
metadata:
  name: no-limit-memory-excluded-namespace
  namespace: ingress-nginx
spec:
  schedule: "* * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          containers:
            - name: no-limit-memory-en
              image: nginx
              resources:
                requests:
                  memory: "64Mi"
                  cpu: "250m"
                limits:
                  cpu: "500m"
