test/enforce-container-resources/deployment-multiple-problems.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: no-resources
  namespace: something
spec:
  template:
    spec:
      containers:
        - name: no-resources
          image: nginx
        - name: different-memory
          image: nginx
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
  selector:
    matchLabels:
      app: nginx
