test/enforce-container-resources/job-no-requests-and-limits.yaml
apiVersion: batch/v1
kind: Job
metadata:
  name: no-requests-and-limits
  namespace: not-excluded
spec:
  template:
    spec:
      containers:
        - name: no-requests-and-limits
          image: nginx
          resources:
            requests: {}
            limits: {}
