test/enforce-container-resources/pod-different-memory-excluded-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: different-memory-excluded-namespace
  namespace: ingress-nginx
spec:
  containers:
    - name: different-memory-en
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
