test/enforce-container-resources/pod-different-memory.yaml
#??
apiVersion: v1
kind: Pod
metadata:
  name: different-memory
spec:
  containers:
    - name: different-memory
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "128Mi"
          cpu: "500m"
