test/enforce-container-resources/pod-no-limit-cpu-and-memory.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-limit-cpu-and-memory
spec:
  containers:
    - name: no-limit-cpu-and-memory
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits: {}
