test/enforce-container-resources/pod-no-limit-cpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-limit-cpu
spec:
  containers:
    - name: no-limit-cpu
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "64Mi"
