test/enforce-container-resources/pod-no-limits-excluded-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-limits-excluded-namespace
  namespace: ingress-nginx
spec:
  containers:
    - name: no-limits-en
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
