test/enforce-container-resources/pod-no-request-cpu-and-memory-excluded-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-request-cpu-and-memory-excluded-namespace
  namespace: ingress-nginx
spec:
  containers:
    - name: no-request-cpu-and-memory-en
      image: nginx
      resources:
        requests: {}
        limits:
          memory: "64Mi"
          cpu: "500m"
