test/enforce-container-resources/pod-no-request-cpu-and-memory.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-request-cpu-and-memory
spec:
  containers:
    - name: no-request-cpu-and-memory
      image: nginx
      resources:
        requests: {}
        limits:
          memory: "64Mi"
          cpu: "500m"
