test/enforce-container-resources/pod-no-request-cpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-request-cpu
spec:
  containers:
    - name: no-request-cpu
      image: nginx
      resources:
        requests:
          memory: "64Mi"
        limits:
          memory: "64Mi"
          cpu: "500m"
