test/enforce-container-resources/pod-no-requests-and-limits-excluded-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-requests-and-limits-excluded-namespace
  namespace: ingress-nginx
spec:
  containers:
    - name: no-requests-and-limits-en
      image: nginx
      resources:
        requests: {}
        limits: {}
