test/enforce-container-resources/pod-no-requests-and-limits.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-requests-and-limits
  namespace: not-excluded
spec:
  containers:
    - name: no-requests-and-limits
      image: nginx
      resources:
        requests: {}
        limits: {}
