test/enforce-container-resources/pod-no-requests-excluded-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-requests-excluded-namespace
  namespace: ingress-nginx
spec:
  containers:
    - name: no-requests-en
      image: nginx
      resources:
        limits:
          memory: "64Mi"
          cpu: "500m"
