test/enforce-container-resources/pod-no-requests.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-requests
spec:
  containers:
    - name: no-requests
      image: nginx
      resources:
        limits:
          memory: "64Mi"
          cpu: "500m"
