test/enforce-container-resources/pod-no-resources-excluded-namespace.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-resources-excluded-namespace
  namespace: ingress-nginx
spec:
  containers:
    - name: no-resources-en
      image: nginx
