test/enforce-container-resources/pod-no-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: no-resources
spec:
  containers:
    - name: no-resources
      image: nginx
