test/enforce-container-resources/pod-proper.yaml
apiVersion: v1
kind: Pod
metadata:
  name: proper
  namespace: not-excluded
spec:
  containers:
    - name: proper
      image: nginx
      resources:
        requests:
          memory: "64Mi"
          cpu: "250m"
        limits:
          memory: "64Mi"
