test/enforce-container-resources/statefulset-proper.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: web
  namespace: not-excluded
spec:
  selector:
    matchLabels:
      app: nginx
  serviceName: "nginx"
  replicas: 3
  template:
    spec:
      containers:
      - name: proper
        image: nginx
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
      - name: proper2
        image: nginx
        resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "64Mi"
